--- a/project.yml
+++ b/project.yml
@@ -66,7 +66,7 @@
 #    - -Wredundant-decls
 #    - -Wmissing-declarations
 #    - -Werror
-    - -DCIRQUID=0 # Single buffer "instance" of CirQu lib. configured with ID 0
+    - -DCQTEMPLSEUP_ID=0 # Single buffer "instance" of CirQu lib. configured with ID 0
   :common_link_flags: &common_link_flags
   :gcov:
     :compile:
