--- a/project.yml
+++ b/project.yml
@@ -50,22 +50,23 @@
 
 :flags:
   :common_c_flags: &common_c_flags
-    - -Wall
     - -Wextra
-    - -pedantic
-    - -Wpointer-arith
-    - -Wuninitialized
-    - -Wcast-align
-    - -Wconversion
-    - -Wwrite-strings
-    - -Wno-comment
-    - -Wshadow
-    - -Og
-    - -g
-    - -std=c99
+    - -Wpedantic
 #    - -Wredundant-decls
 #    - -Wmissing-declarations
+#    - -Wmissing-prototypes
+    - -Wstrict-prototypes
+    - -Wdouble-promotion
+    - -Wcast-align
+    - -Wcast-qual
+    - -Wconversion
+    - -Wwrite-strings
+    - -Wparentheses
+    - -Wshadow
 #    - -Werror
+    - -std=c99
+    - -Og
+    - -g
     - -DCQTEMPLSEUP_ID=0 # Single "instance" of CirQu lib. configured with ID
   :common_link_flags: &common_link_flags
   :gcov:
